fix: long page template names caused Display field to wrap in the insert pages tinymce popup; set to nowrap to prevent this.
git-svn-id: http://plugins.svn.wordpress.org/insert-pages/trunk@1020620 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/wpinsertpages.css
+++ b/assets/css/wpinsertpages.css
@@ -134,6 +134,7 @@
 
 #insertpage-options-panel .insertpage-format {
 	margin-top: 5px;
+	white-space: nowrap;
 }
 
 #wp-insertpage label input[type="text"] {
